Add test for looking up values declared after the keyword

--- a/test/fixtures/in/default.css
+++ b/test/fixtures/in/default.css
@@ -9,7 +9,12 @@
 .Test2 {
   margin-left: 400px;
   margin-right: @margin-left;
-  border: @padding;
+}
+
+.Test3 {
+  width: @padding;
+  height: @padding;
+  padding: 10px;
 }
 
 @media (min-width: 300px) {
