Add test to reveal nesting issue

--- a/test/fixtures/in/nested.css
+++ b/test/fixtures/in/nested.css
@@ -26,3 +26,13 @@
     }
   }
 }
+
+.Parent {
+  padding-left: 5px;
+  padding-right: @padding-left;
+
+  .Child {
+    padding-left: 10px;
+    padding-right: @padding-left;
+  }
+}
